# bt

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt  server  server_architecture.md
BT/: BTContext.h  BTNode.h  BT_LibraryConfig.cmake.in  BehaviorTree.h  BehaviorTreeEngine.h  Blackboard.h  CMakeLists.txt  Context.h  Engine.h  EnvironmentInfo.h  IBTExecutor.h  IExecutor.h  IGameWorld.h  IInterface.h  IOwner.h  Node.h  Tree.h
BT/Action/: Action.h  BTAction.h
BT/Condition/: BTCondition.h  Condition.h
BT/Control/: BTParallel.h  BTRandom.h  BTSelector.h  BTSequence.h  Parallel.h  Random.h  Selector.h  Sequence.h
BT/Decorator/: BTInvert.h  BTRepeat.h  Delay.h  Invert.h  Repeat.h  Timeout.h
BT/Test/: BehaviorTreeTests.cpp  BehaviorTreeTests.h  PerformanceTest.cpp  TestMain.cpp  TestNodes.h
client/: AsioTestClient.cpp  AsioTestClient.h  AsioTestClientMain.cpp  CMakeLists.txt  TestClient.cpp  TestClient.h  asio_test_client.cpp  asio_test_client.h  asio_test_client_main.cpp  main.cpp
client/AI/: ClientAIMessageHandler.cpp  ClientAIMessageHandler.h
client/BT/: PlayerBTs.cpp  PlayerBTs.h
client/BT/Action/: Attack.cpp  Attack.h  Chase.cpp  Chase.h  Patrol.cpp  Patrol.h  TeleportToNearest.cpp  TeleportToNearest.h
client/BT/Condition/: HasTarget.cpp  HasTarget.h  InAttackRange.cpp  InAttackRange.h  InDetectionRange.cpp  InDetectionRange.h  TeleportTimer.cpp  TeleportTimer.h
client/Common/: ClientMessageProcessor.cpp  ClientMessageProcessor.h
client/Network/: ClientNetworkMessageHandler.cpp  ClientNetworkMessageHandler.h
config/: monster_spawns.json  server.conf
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ConnectionStatus.js  MonsterCard.js  MonsterDashboard.js  MonsterFilter.js  PlayerDashboard.js  ServerStats.js
frontend/src/context/: WebSocketContext.js
include/: asio_server.h  asio_test_client.h  behavior_tree.h  logger.h  monster_ai.h  packet_handler.h  player.h  rest_api_server.h  server.h  simple_websocket_server.h  test_client.h  web_server.h  websocket_server.h
scripts/: benchmark.sh  build.sh  install_dependencies.sh  run.sh  test.sh  test_asio.sh
server/: AsioMain.cpp  AsioServer.cpp  AsioServer.h  BehaviorTree.cpp  BehaviorTree.h  CMakeLists.txt  GameWorld.cpp  GameWorld.h  Logger.cpp  Map.cpp  Map.h  MonsterAI.cpp  MonsterAI.h  MonsterFactory.cpp  MonsterFactory.h  NPC.cpp  NPC.h  PacketHandler.cpp  PacketHandler.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  RestApiServer.cpp  RestApiServer.h  Server.cpp  Server.h  SimpleWebSocketServer.cpp  asio_main.cpp  asio_server.cpp  asio_server.h  behavior_tree.cpp  behavior_tree.h  game_world.cpp  game_world.h  logger.cpp  monster_ai.cpp  monster_ai.h  packet_handler.cpp  packet_handler.h  (+9 more)
server/BT/: BTContext.cpp  BTContext.h  BTNode.cpp  BTNode.h  BehaviorTree.cpp  BehaviorTree.h  BehaviorTreeEngine.cpp  BehaviorTreeEngine.h  MonsterAI.cpp  MonsterAI.h
server/BT/Action/: Attack.cpp  Attack.h  AttackAction.cpp  AttackAction.h  BTAction.cpp  BTAction.h  Patrol.cpp  Patrol.h  PatrolAction.cpp  PatrolAction.h
server/BT/Condition/: BTCondition.cpp  BTCondition.h  HasTarget.cpp  HasTarget.h  HasTargetCondition.cpp  HasTargetCondition.h  InAttackRange.cpp  InAttackRange.h  InAttackRangeCondition.cpp  InAttackRangeCondition.h
server/BT/Control/: BTParallel.cpp  BTParallel.h  BTRandom.cpp  BTRandom.h  BTSelector.cpp  BTSelector.h  BTSequence.cpp  BTSequence.h
server/BT/Decorator/: BTDelay.cpp  BTDelay.h  BTInvert.cpp  BTInvert.h  BTRepeat.cpp  BTRepeat.h  BTTimeout.cpp  BTTimeout.h
server/BT/Monster/: MessageBasedMonsterManager.cpp  MessageBasedMonsterManager.h  Monster.cpp  Monster.h  MonsterAI.cpp  MonsterAI.h  MonsterAIController.h  MonsterBTExecutor.cpp  MonsterBTExecutor.h  MonsterBTs.cpp  MonsterBTs.h  MonsterFactory.cpp  MonsterFactory.h  MonsterManager.cpp  MonsterManager.h  MonsterTypes.h
server/BT/NPC/: NPC.cpp  NPC.h
server/Common/: GameMessageProcessor.h  GameMessages.h  LockOrder.cpp  LockOrder.h  MessageQueue.h  ReadOnlyView.h
server/Network/Game/: AsioClient.cpp  AsioClient.h  AsioMain.cpp  AsioServer.cpp  AsioServer.h  Client.cpp  Client.h  PacketHandler.cpp  PacketHandler.h  Server.cpp  Server.h  main.cpp
server/Network/RestAPI/: RestApiServer.cpp  RestApiServer.h
server/Network/WebSocket/: BeastHttpWebSocketServer.cpp  BeastHttpWebSocketServer.h  BeastWebSocketServer.cpp  BeastWebSocketServer.h  NetworkMessageHandler.cpp  NetworkMessageHandler.h  SimpleWebSocketServer.cpp  SimpleWebSocketServer.h
server/Player/: MessageBasedPlayerManager.cpp  MessageBasedPlayerManager.h
server/World/: GameWorld.cpp  GameWorld.h  Map.cpp  Map.h
shared/: AGENTS.md  CMakeLists.txt  Logger.cpp  Logger.h  packet_protocol.cpp  packet_protocol.h
shared/Game/: PacketProtocol.cpp  PacketProtocol.h  packets.proto
shared/Network/: ReceiveBuffer.cpp  ReceiveBuffer.h  ReceiveBufferPool.cpp  ReceiveBufferPool.h  SendBuffer.cpp  SendBuffer.h  SendBufferPool.cpp  SendBufferPool.h
src/: asio_main.cpp  asio_server.cpp  asio_test_client.cpp  main.cpp  monster_ai.cpp  packet_handler.cpp  rest_api_server.cpp  server.cpp  simple_websocket_server.cpp  test_client.cpp  test_client_main.cpp  web_server.cpp  websocket_server.cpp
web/: dashboard.html
